<resources>
    <string name="app_name">Holiday Trip</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">CLick to register</string>
    <string name="logout">Logout</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="add_plan">Add Plan</string>
    <string name="update_plan">Update Plan</string>
</resources>